1999-07-17  Nat Friedman  <nat@gnome-support.com>

	* calendar.c (calendar_add_object): Copy the new UID into the
 	iCalObject structure.

1999-07-16  Miguel de Icaza  <miguel@gnu.org>

	* gnome-month-item.c (gnome_month_item_set_arg): Merge fix from
	gnome-pim-1-0: Fixed cut&paste bug for day fontsets.

1999-07-14  Miguel de Icaza  <miguel@gnu.org>

	* calobj.c (ical_gen_uid): Returns a UID.
	(ical_object_new): Use a UID when creating an event.  Should get
	syncing done easier.

1999-07-14  Nicholas J Kreucher <nick@poetic.com>

	* calobj.c (skip_numbers): Actually skip over the numbers.
	(ical_object_to_vobject): Test the proper variable for storing the
	proper information.

1999-07-14  Jean-Noel Guiheneuf <jean-noel.guiheneuf@wanadoo.fr>

	* timeutil.c (time_add_month): Fixed the problem with next month
	going from a 31-day to a 30-day by adjusting the date to the
	closest day at the end of the month.

1999-06-07  Mike McEwan  <mike@lotusland.demon.co.uk>

        * timeutil.c (time_add_month): Tell ktime' that we don't know
        about daylight saving time so that it does *not* make adjustments
        when we traverse a DST boundary.
        (time_year_begin): ditto.
        (time_year_end): ditto.
        (time_month_begin): ditto.
        (time_month_end): ditto.

1999-06-16  Anders Carlsson  <anders.carlsson@tordata.se>

	* main.c (new_calendar): Realize the toplevel widget when
	--hidden is passed to gnomecal. This fixes a segfault.

1999-06-04  Robert Brady  <rwb197@ecs.soton.ac.uk>

	* gnome-cal.h, gnome-cal.c: Fix abort() problem with the year view.
	(Bug #1367). Thanks to Owen Cliffe <oc197@ecs.soton.ac.uk> for
	helping track it down.

1999-06-03  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* calobj.c (daynumberlist): One line bug fix from Sergey I Panov.

1999-06-02  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* view-utils.c (nicetime): Use %H instead of %k, as %k is a GNU
	extension, not available in other systems.
